--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <!-- 顶部导航栏 -->
         <header class="header">
-            <button id="homeBtn" class="home-btn" title="回到主页">🏠</button>
+            <!-- <button id="homeBtn" class="home-btn" title="回到主页">🏠</button> -->
             <h1>糖尿病饮食和运动管理</h1>
             <!-- <button id="settingsBtn" class="settings-btn">⚙️ 设置</button> -->
         </header>
@@ -78,9 +78,9 @@
             <!-- 输入区域 -->
             <div class="input-area">
                 <div class="input-tabs">
-                    <button class="tab-btn active" data-tab="text">📝 文字</button>
-                    <button class="tab-btn" data-tab="voice">🎤 语音</button>
-                    <button class="tab-btn" data-tab="image">📷 图片</button>
+                    <button class="tab-btn active" data-tab="text">文字</button>
+                    <button class="tab-btn" data-tab="voice">语音</button>
+                    <button class="tab-btn" data-tab="image">图片</button>
                 </div>
 
                 <!-- 文字输入 -->
